# ort-batcher

./: Cargo.toml  README.md
benches/: threads.rs
examples/: example.rs
src/: batch.rs  batcher.rs  error.rs  lib.rs
tests/: correctness.rs  model.onnx  model.py
