[package]
name = "ort_batcher"
version = "0.1.0"
edition = "2021"
authors = ["Martín Emiliano Lombardo <hello@mlomb.dev>"]

[dependencies]
flume = { version = "0.11.0", default-features = false }
ndarray = { version = "0.15.6", default-features = false }
ort = { git = "https://github.com/pykeio/ort", branch = "v2", default-features = false, features = ["ndarray"] }

[dev-dependencies]
rand = "0.8.5"
ort = { git = "https://github.com/pykeio/ort", branch = "v2", features = ["download-binaries"] }
divan = "0.1.2"
ndarray-rand = "0.14.0"
ndarray = { version = "0.15.6", features = ["approx"] }

[[bench]]
name = "threads"
harness = false

[profile.bench]
debug = true
