[package]
name = "ort_batcher"
version = "0.1.1"
edition = "2021"
description = "Small crate to batch inferences of ONNX models using ort (onnxruntime)"
authors = ["Martín Emiliano Lombardo <hello@mlomb.dev>"]
license = "Apache-2.0"
repository = "https://github.com/mlomb/ort-batcher"
keywords = ["batch", "ort", "onnxruntime"]
exclude = ["/tests/model.onnx"]

[dependencies]
flume = { version = "0.11.0", default-features = false }
ndarray = { version = "0.15.6", default-features = false }
ort = { version = "2.0.0-alpha.1", default-features = false, features = ["ndarray"] }

[dev-dependencies]
rand = "0.8.5"
ort = { version = "2.0.0-alpha.1", features = ["download-binaries", "fetch-models", "cuda"] }
divan = "0.1.2"
ndarray-rand = "0.14.0"
ndarray = { version = "0.15.6", features = ["approx"] }
tracing-subscriber = "0.3.18"

[[bench]]
name = "threads"
harness = false
